...
    onJoinToggle: () -> Unit,
) {
    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxWidth(0.7f),
    ) {
        LobbyTitle("SPIEL-LOBBY")
        Spacer(modifier = Modifier.height(40.dp))
        MainInputField(
            value = playerName,
            onValueChange = onPlayerNameChange,
            placeholder = "SPIELERNAME",
            modifier = Modifier.fillMaxWidth(0.8f),
            keyboardOptions =
                KeyboardOptions(
                    capitalization = KeyboardCapitalization.Characters,
                    keyboardType = KeyboardType.Ascii,
                ),
...
        Spacer(modifier = Modifier.height(32.dp))
        Row(
            modifier = Modifier.fillMaxWidth(0.8f),
            horizontalArrangement = Arrangement.spacedBy(24.dp),
        ) {
            MainButton(
                text = "LOBBY ERSTELLEN",
                onClick = onCreateClick,
                enabled = playerName.isNotBlank(),
                modifier = Modifier.weight(1f),
            )
            MainButton(
                text = "LOBBY BEITRETEN",
                onClick = onJoinToggle,
                enabled = playerName.isNotBlank(),
                modifier = Modifier.weight(1f),
            )
        }
        ErrorTextSlot(errorText)
...
