...
    <string name="game_lobby">Spiel-Lobby</string>
    <string name="enter_player_name">Spielername eingeben</string>
    <string name="enter_lobby_code">4-stelligen Lobby-Code eingeben</string>
    <string name="create_lobby">Lobby erstellen</string>
    <string name="join_lobby">Lobby beitreten</string>
    <string name="open_map_playground">Karte direkt testen</string>
    <string name="load_game_title">Spiel wird vorbereitet</string>
    <string name="load_game_description">Karte und Spielzustand werden geladen.</string>
    <string name="enter_waiting_room">Warteraum betreten</string>
    <string name="cancel">Abbrechen</string>
    <string name="lobby_id">Lobby</string>
    <string name="you_are_host">Du bist der Host</string>
    <string name="waiting_for_host">Warte auf Host zum Starten...</string>
    <string name="players">Spieler</string>
...
    <string name="game_connection_disconnected">Verbindung getrennt</string>
    <string name="game_action_reinforce">Verstärken</string>
    <string name="game_action_attack">Angriff</string>
    <string name="game_action_move">Verschieben</string>
    <string name="game_action_draw_card">Karte ziehen</string>
    <string name="game_action_waiting">Warten</string>
    <string name="game_sync_reconnecting">Verbindung getrennt. Aktionen sind gesperrt.</string>
    <string name="game_sync_catching_up">Spielstand wird synchronisiert</string>
    <string name="game_sync_desynced">Spielstand nicht synchron</string>
    <string name="game_sync_reload">Neu laden</string>
    <string name="game_sync_reload_pending">Lädt</string>
    <string name="game_your_turn">Du bist dran</string>
    <string name="game_player_left_toast">%1$s hat das Spiel verlassen</string>
...
